Closed
Bug 1834938
Opened 1 years ago
Closed 1 years ago
uriloader/exthandler/uikit/nsLocalHandlerAppUIKit.h:24:28: error: unknown type name 'BrowsingContext'; did you mean 'mozilla::dom::BrowsingContext'?
Categories
(Firefox :: File Handling, defect, P5)
Tracking
()
RESOLVED
FIXED
115 Branch
Tracking | Status | |
---|---|---|
firefox115 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Building with --target=aarch64-apple-ios fails with (among many other things):
0:01.33 /tmp/gecko/uriloader/exthandler/uikit/nsLocalHandlerAppUIKit.h:24:28: error: unknown type name 'BrowsingContext'; did you mean 'mozilla::dom::BrowsingContext'?
0:01.33 BrowsingContext* aBrowsingContext) override;
0:01.33 ^~~~~~~~~~~~~~~
0:01.33 mozilla::dom::BrowsingContext
0:01.33 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsIMIMEInfo.h:33:7: note: 'mozilla::dom::BrowsingContext' declared here
0:01.33 class BrowsingContext; /* webidl BrowsingContext */
0:01.33 ^
0:01.34 In file included from Unified_mm_uriloader_exthandler0.mm:2:
0:01.34 /tmp/gecko/uriloader/exthandler/uikit/nsLocalHandlerAppUIKit.mm:13:25: error: out-of-line definition of 'LaunchWithURI' does not match any declaration in 'nsLocalHandlerAppUIKit'
0:01.34 nsLocalHandlerAppUIKit::LaunchWithURI(nsIURI* aURI, nsIInterfaceRequestor* aWindowContext) {
0:01.34 ^~~~~~~~~~~~~
0:01.58 In file included from Unified_mm_uriloader_exthandler0.mm:11:
0:01.59 In file included from /tmp/gecko/uriloader/exthandler/uikit/nsMIMEInfoUIKit.mm:7:
0:01.59 /tmp/gecko/uriloader/exthandler/uikit/nsMIMEInfoUIKit.h:22:20: warning: 'LoadUriInternal' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:01.59 virtual nsresult LoadUriInternal(nsIURI* aURI);
0:01.59 ^
0:01.59 /tmp/gecko/uriloader/exthandler/nsMIMEInfoImpl.h:214:20: note: overridden virtual function is here
0:01.59 virtual nsresult LoadUriInternal(nsIURI* aURI) override = 0;
0:01.59 ^
0:01.60 In file included from Unified_mm_uriloader_exthandler0.mm:20:
0:01.60 In file included from /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.mm:7:
0:01.60 /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.h:25:14: warning: 'GetApplicationDescription' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:01.60 NS_IMETHOD GetApplicationDescription(const nsACString& aScheme,
0:01.60 ^
0:01.60 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsIExternalProtocolService.h:68:36: note: overridden virtual function is here
0:01.60 JS_HAZ_CAN_RUN_SCRIPT NS_IMETHOD GetApplicationDescription(const nsACString& aScheme, nsAString& _retval) = 0;
0:01.60 ^
0:01.60 In file included from Unified_mm_uriloader_exthandler0.mm:20:
0:01.60 In file included from /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.mm:7:
0:01.60 /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.h:27:14: warning: 'IsCurrentAppOSDefaultForProtocol' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:01.60 NS_IMETHOD IsCurrentAppOSDefaultForProtocol(const nsACString& aScheme,
0:01.60 ^
0:01.60 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsIExternalProtocolService.h:71:36: note: overridden virtual function is here
0:01.60 JS_HAZ_CAN_RUN_SCRIPT NS_IMETHOD IsCurrentAppOSDefaultForProtocol(const nsACString& aScheme, bool *_retval) = 0;
0:01.60 ^
0:01.60 In file included from Unified_mm_uriloader_exthandler0.mm:20:
0:01.60 In file included from /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.mm:7:
0:01.61 /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.h:31:14: warning: 'GetFromTypeAndExtension' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:01.61 NS_IMETHOD GetFromTypeAndExtension(const nsACString& aType,
0:01.61 ^
0:01.61 /tmp/gecko/uriloader/exthandler/nsExternalHelperAppService.h:65:3: note: overridden virtual function is here
0:01.61 NS_DECL_NSIMIMESERVICE
0:01.61 ^
0:01.61 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsIMIMEService.h:96:14: note: expanded from macro 'NS_DECL_NSIMIMESERVICE'
0:01.61 NS_IMETHOD GetFromTypeAndExtension(const nsACString& aMIMEType, const nsACString& aFileExt, nsIMIMEInfo **_retval) override; \
0:01.61 ^
0:01.61 In file included from Unified_mm_uriloader_exthandler0.mm:20:
0:01.61 In file included from /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.mm:7:
0:01.61 /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.h:37:14: warning: 'GetProtocolHandlerInfoFromOS' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:01.61 NS_IMETHOD GetProtocolHandlerInfoFromOS(const nsACString& aScheme,
0:01.61 ^
0:01.61 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsIExternalProtocolService.h:59:36: note: overridden virtual function is here
0:01.61 JS_HAZ_CAN_RUN_SCRIPT NS_IMETHOD GetProtocolHandlerInfoFromOS(const nsACString& aProtocolScheme, bool *aFound, nsIHandlerInfo **_retval) = 0;
0:01.61 ^
0:01.61 In file included from Unified_mm_uriloader_exthandler0.mm:20:
0:01.61 In file included from /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.mm:7:
0:01.61 /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.h:47:20: warning: 'GetFileTokenForPath' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:01.61 virtual nsresult GetFileTokenForPath(const char16_t* platformAppPath,
0:01.61 ^
0:01.61 /tmp/gecko/uriloader/exthandler/nsExternalHelperAppService.h:109:20: note: overridden virtual function is here
0:01.61 virtual nsresult GetFileTokenForPath(const char16_t* platformAppPath,
0:01.61 ^
0:01.61 In file included from Unified_mm_uriloader_exthandler0.mm:20:
0:01.61 /tmp/gecko/uriloader/exthandler/uikit/nsOSHelperAppService.mm:49:23: error: out-of-line definition of 'GetProtocolHandlerInfoFromOS' does not match any declaration in 'nsOSHelperAppService'
0:01.61 nsOSHelperAppService::GetProtocolHandlerInfoFromOS(const char* aScheme, bool* found,
0:01.61 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
0:01.67 6 warnings and 3 errors generated.
0:01.68 gmake[4]: *** [/tmp/gecko/config/rules.mk:679: Unified_mm_uriloader_exthandler0.o] エラー 1
0:01.68 gmake[4]: *** 未完了のジョブを待っています....
0:05.60 In file included from Unified_cpp_uriloader_exthandler0.cpp:38:
0:05.60 In file included from /tmp/gecko/uriloader/exthandler/nsExternalHelperAppService.cpp:53:
0:05.60 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsOSHelperAppService.h:25:14: warning: 'GetApplicationDescription' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:05.60 NS_IMETHOD GetApplicationDescription(const nsACString& aScheme,
0:05.60 ^
0:05.60 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsIExternalProtocolService.h:68:36: note: overridden virtual function is here
0:05.60 JS_HAZ_CAN_RUN_SCRIPT NS_IMETHOD GetApplicationDescription(const nsACString& aScheme, nsAString& _retval) = 0;
0:05.60 ^
0:05.60 In file included from Unified_cpp_uriloader_exthandler0.cpp:38:
0:05.60 In file included from /tmp/gecko/uriloader/exthandler/nsExternalHelperAppService.cpp:53:
0:05.60 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsOSHelperAppService.h:27:14: warning: 'IsCurrentAppOSDefaultForProtocol' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:05.60 NS_IMETHOD IsCurrentAppOSDefaultForProtocol(const nsACString& aScheme,
0:05.60 ^
0:05.60 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsIExternalProtocolService.h:71:36: note: overridden virtual function is here
0:05.60 JS_HAZ_CAN_RUN_SCRIPT NS_IMETHOD IsCurrentAppOSDefaultForProtocol(const nsACString& aScheme, bool *_retval) = 0;
0:05.60 ^
0:05.61 In file included from Unified_cpp_uriloader_exthandler0.cpp:38:
0:05.61 In file included from /tmp/gecko/uriloader/exthandler/nsExternalHelperAppService.cpp:53:
0:05.61 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsOSHelperAppService.h:31:14: warning: 'GetFromTypeAndExtension' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:05.61 NS_IMETHOD GetFromTypeAndExtension(const nsACString& aType,
0:05.61 ^
0:05.61 /tmp/gecko/uriloader/exthandler/nsExternalHelperAppService.h:65:3: note: overridden virtual function is here
0:05.61 NS_DECL_NSIMIMESERVICE
0:05.61 ^
0:05.61 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsIMIMEService.h:96:14: note: expanded from macro 'NS_DECL_NSIMIMESERVICE'
0:05.61 NS_IMETHOD GetFromTypeAndExtension(const nsACString& aMIMEType, const nsACString& aFileExt, nsIMIMEInfo **_retval) override; \
0:05.61 ^
0:05.61 In file included from Unified_cpp_uriloader_exthandler0.cpp:38:
0:05.61 In file included from /tmp/gecko/uriloader/exthandler/nsExternalHelperAppService.cpp:53:
0:05.61 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsOSHelperAppService.h:37:14: warning: 'GetProtocolHandlerInfoFromOS' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:05.61 NS_IMETHOD GetProtocolHandlerInfoFromOS(const nsACString& aScheme,
0:05.61 ^
0:05.61 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsIExternalProtocolService.h:59:36: note: overridden virtual function is here
0:05.61 JS_HAZ_CAN_RUN_SCRIPT NS_IMETHOD GetProtocolHandlerInfoFromOS(const nsACString& aProtocolScheme, bool *aFound, nsIHandlerInfo **_retval) = 0;
0:05.61 ^
0:05.61 In file included from Unified_cpp_uriloader_exthandler0.cpp:38:
0:05.61 In file included from /tmp/gecko/uriloader/exthandler/nsExternalHelperAppService.cpp:53:
0:05.61 /tmp/gecko/obj-aarch64-apple-ios/dist/include/nsOSHelperAppService.h:47:20: warning: 'GetFileTokenForPath' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
0:05.61 virtual nsresult GetFileTokenForPath(const char16_t* platformAppPath,
0:05.61 ^
0:05.61 /tmp/gecko/uriloader/exthandler/nsExternalHelperAppService.h:109:20: note: overridden virtual function is here
0:05.61 virtual nsresult GetFileTokenForPath(const char16_t* platformAppPath,
0:05.61 ^
0:08.31 5 warnings generated.
Assignee | ||
Comment 1•1 years ago
|
||
Also fix warnings about missing override annotations.
Updated•1 years ago
|
Group: mozilla-employee-confidential
Updated•1 years ago
|
Severity: -- → S4
Priority: -- → P5
Assignee | ||
Comment 2•1 years ago
|
||
Status: NEW → RESOLVED
Closed: 1 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
Updated•1 years ago
|
status-firefox115:
--- → fixed
Updated•6 months ago
|
Group: mozilla-employee-confidential
You need to log in
before you can comment on or make changes to this bug.
Description
•