Bug 1834938 - Refresh uriloader/exthandler/uikit to match changed method signatures. r=Gijs

Also fix warnings about missing override annotations.

Differential Revision: https://phabricator.services.mozilla.com/D179017